--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ sourceCompatibility = 1.8
 mainClassName = "org.usfirst.frc.team1294.vision.Application"
 
 repositories {
+  mavenLocal()
   mavenCentral()
   maven {
     url "http://first.wpi.edu/FRC/roborio/maven/release"
@@ -28,8 +29,10 @@ dependencies {
   compile group: 'io.vertx', name: 'vertx-web', version: '3.4.2'
   compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
   compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+  compile group: 'com.google.guava', name: 'guava', version: '23.2-jre'
 
-  compile group: 'org.usfirst.frc.team1294', name: 'opencv-331', version: '0.1.0-dev.0.20+0e242cb9efd256bf16182e3daf8e6bc0cefeaca8'
+
+  compile group: 'org.usfirst.frc.team1294', name: 'opencv-331', version: '0.1.0-dev.0.22+0f53bac3b6d4a2cd46109bbe3e0dc276714a2caf'
 
   compile group: 'edu.wpi.first.wpilib.networktables.java', name: 'NetworkTables', version: '3.1.7', classifier: System.properties['os.arch'] == 'arm' ? 'arm' : 'desktop'
 
