--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id "eclipse"
   id "idea"
   id "application"
+  id 'com.github.johnrengelman.shadow' version '2.0.1'
 }
 
 group 'org.usfirst.frc.team1294'
@@ -32,7 +33,7 @@ dependencies {
   compile group: 'com.google.guava', name: 'guava', version: '23.2-jre'
 
 
-  compile group: 'org.usfirst.frc.team1294', name: 'opencv-331', version: '0.1.0-dev.0.22+0f53bac3b6d4a2cd46109bbe3e0dc276714a2caf'
+  compile group: 'org.usfirst.frc.team1294', name: 'opencv-331', version: '0.1.0-dev.0.26+4d076846080a062f27ef1bd8cc8e19b00b228469'
 
   compile group: 'edu.wpi.first.wpilib.networktables.java', name: 'NetworkTables', version: '3.1.7', classifier: System.properties['os.arch'] == 'arm' ? 'arm' : 'desktop'
 
@@ -50,6 +51,10 @@ jar {
     )
   }
   from configurations.compile.collect { entry -> zipTree(entry) }
+}
+
+shadowJar {
+  classifier = null
 }
 
 task wrapper(type: Wrapper) {
